fixed error and finish test all apis
